[gd_scene load_steps=17 format=3 uid="uid://cshcf4y2ntrp5"]

[ext_resource type="Script" uid="uid://rv0jyu11oox2" path="res://scripts/characters/nest_slot.gd" id="1_3cvli"]
[ext_resource type="PackedScene" uid="uid://dnwffnhs6gnwh" path="res://scenes/characters/Character.tscn" id="1_nym66"]
[ext_resource type="Shader" uid="uid://dxgq0lr1hup54" path="res://shaders/nest_slot.gdshader" id="2_q7nok"]
[ext_resource type="Shader" uid="uid://cjl6s6ce2grqm" path="res://shaders/selector.gdshader" id="4_d11t0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d11t0"]
resource_local_to_scene = true
shader = ExtResource("2_q7nok")
shader_parameter/opacity = 1.0

[sub_resource type="Curve" id="Curve_3cvli"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_d11t0"]
curve = SubResource("Curve_3cvli")

[sub_resource type="Curve" id="Curve_d11t0"]
_data = [Vector2(0.0204592, 0.994382), 0.0, -2.86888, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_x43o2"]
curve = SubResource("Curve_d11t0")

[sub_resource type="Curve" id="Curve_6gk50"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_k1qer"]
curve = SubResource("Curve_6gk50")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_x43o2"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 5.0
angle_min = 45.0
angle_max = 45.0
radial_velocity_min = 200.0
radial_velocity_max = 300.0
radial_velocity_curve = SubResource("CurveTexture_x43o2")
gravity = Vector3(0, 0, 0)
scale_min = 8.0
scale_max = 10.0
scale_curve = SubResource("CurveTexture_k1qer")
alpha_curve = SubResource("CurveTexture_d11t0")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3cvli"]
size = Vector2(16, 16)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x43o2"]
shader = ExtResource("4_d11t0")

[sub_resource type="Gradient" id="Gradient_imhq2"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_6gk50"]
gradient = SubResource("Gradient_imhq2")
width = 25
height = 25

[node name="NestSlot" type="StaticBody2D"]
collision_layer = 1024
collision_mask = 0
input_pickable = true
script = ExtResource("1_3cvli")

[node name="Character" parent="." instance=ExtResource("1_nym66")]
render = SubResource("ShaderMaterial_d11t0")
always_visible = true

[node name="PutParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 50
one_shot = true
explosiveness = 0.8
process_material = SubResource("ParticleProcessMaterial_x43o2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_3cvli")

[node name="Selection" type="Sprite2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_x43o2")
texture = SubResource("GradientTexture2D_6gk50")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
